# HW-python

10.2/: .env.sample  main.py  pyproject.toml
10.2/data/: data.json
10.2/src/: decorators.py  generators.py  logging.py  masks.py  mylog.txt  operation_searcher.py  processing.py  tables_reader.py  utils.py  widget.py
10.2/tests/: masks.py  processing.py  test_generators.py  test_masks.py  test_processing.py  test_tables_reader.py  test_utils.py  test_widget.py  widget.py
