[tool.poetry]
name = "skypro-homework1828"
version = "0.1.0"
description = "second attempt to create ыуыубыбуыбыуб"
authors = ["Bogdanchik <bogdanleontev59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dotenv = "^0.0.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
